2015-11-17 Fred Gleason <fredg@paravelsystems.com> 	* Added code to implement explicit library API versioning in 	'configure.ac' and 'rivendell/Makefile.am'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -43,3 +43,6 @@
 2015-11-17 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored the build system to place C headers in "rivendell/".
 	* Added a pkgconfig definition in 'rivendell.pc.in'.
+2015-11-17 Fred Gleason <fredg@paravelsystems.com>
+	* Added code to implement explicit library API versioning in
+	'configure.ac' and 'rivendell/Makefile.am'.
