--- a/README
+++ b/README
@@ -3,23 +3,32 @@ This is the README file for the Rivendell C API Package.
 
 This is the C Library to use to interface with the Rivendell Database.  
 
-The library utilizes the Rivendell WED Interface API to complete all of it's tasks.  It 
+The library utilizes the Rivendell WEB Interface API to complete all of it's tasks.  It 
 generates a Web page that is passed to the Rivendell WEB server which processes the request
 and send the response back to the calling function.
 
 The C functions in this library need the EXPAT XML libary and the LIBCURL library installed
 before they will work correctly.  Information on getting these libraries is below:
 
-  The first library required is the EXPAT XMP Parser Library written in C which is available on the internet at:
-   http://sourceforge.new/projects/expat.
+  The first library required is the EXPAT XMP Parser Library written in C which 
+  is available on the internet at:
+        http://sourceforge.new/projects/expat.
 
-  This second library also required is the LIBCURL Library which is a free open source client that can be used
-  to get documents to and from servers using many different protocols. It can be found at:
-   http://curl.haxx.se/
-
+  This second library also required is the LIBCURL Library which is a free 
+  open source client that can be used to get documents to and from servers using 
+  many different protocols. It can be found at:
+        http://curl.haxx.se/
 
 The lib directory has all of the source code for the library.
 
 The tests directory has an example of each of the C Library function calls.
+By default - these function calls use hostname = "localhost", user = "USER",
+and password = "" (null).  Three environment variables can be used to change
+the default settings for HostName, Username and Password.  They are:
+   RIVHOST     (Host Name to Connect To).
+   RIVUSER     (Rivendell User Name to use).
+   RIVPASS     (Rivendell User Password).
 
-The docbook directory has documentation on using this library - both in HTML and MAN formats.
+
+The docbook directory has documentation on using this library - both in HTML, PDF and 
+MAN formats.
