--- a/ChangeLog
+++ b/ChangeLog
@@ -57,3 +57,5 @@
 2015-11-20 Fred Gleason <fredg@paravelsystems.com>
 	* Modified 'Makefile.am' to make building of 'docbook/' conditional
 	upon detection of the DocBook toolchain.
+2015-11-20 Fred Gleason <fredg@paravelsystems.com>
+	* Added a '--disable-docbook' switch in 'configure'ac'.
