2016-11-02 Fred Gleason <fredg@paravelsystems.com> 	* Corrected dependency in 'rivwebcapi.spec.in'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -86,3 +86,5 @@
 2016-11-02 Fred Gleason <fredg@paravelsystems.com>
 	* Corrected names of header files in 'rivwebcapi.spec.in'.
 	* Added an invocation to AR_GCC_TARGET() in 'configure.ac'.
+2016-11-02 Fred Gleason <fredg@paravelsystems.com>
+	* Corrected dependency in 'rivwebcapi.spec.in'.
