--- a/ChangeLog
+++ b/ChangeLog
@@ -103,3 +103,6 @@
 	* Fixed a fencepost error in 'rivendell/rd_listlog.c' that caused
 	the last character of the log name to be truncated when calling
 	rd_listlog().
+2017-01-11 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'rivendell/rd_listlog.c' that used the incorrect
+	keyword for detecting audio carts when calling rd_listlog().
