--- a/ChangeLog
+++ b/ChangeLog
@@ -117,3 +117,7 @@
 	  import returns the Cart number and Cut Number.
 2017-01-17 Fred Gleason <fredg@paravelsystems.com>
 	* Cleaned up debugging printf()s from 'rivendell/rd_listlog.c'.
+2017-01-17 Fred Gleason <fredg@paravelsystems.com>
+	* Added a test in 'configure.ac' for MingW32.
+	* Added a test in 'rivendell/rd_common.h' to avoid breaking the
+	build under MingW32.
