--- a/ChangeLog
+++ b/ChangeLog
@@ -229,3 +229,6 @@
 	an authentification ticket via the Rivendell Web API.
 	* Added createticket_test.c test harness for testing of 
 	creation of authentification tickets.
+2017-03-30 Todd Baker <bakert@rfa.org>
+	* Updated documentation files to include additional Authentification 
+	Ticket field and also updated return codes where applicable.
